; ModuleID = '/home/carl/AnghaBench/vlc/src/player/extr_vout.c_vlc_player_vout_SetVar.c'
source_filename = "/home/carl/AnghaBench/vlc/src/player/extr_vout.c_vlc_player_vout_SetVar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i32, i32)* @vlc_player_vout_SetVar to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vlc_player_vout_SetVar(i32* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = call i32* @vlc_player_vout_Hold(i32* %10)
  store i32* %11, i32** %9, align 8
  %12 = load i32*, i32** %9, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = load i32, i32* %7, align 4
  %15 = load i32, i32* %8, align 4
  %16 = call i32 @var_SetChecked(i32* %12, i8* %13, i32 %14, i32 %15)
  %17 = load i32*, i32** %9, align 8
  %18 = call i32 @vout_Release(i32* %17)
  ret void
}

declare dso_local i32* @vlc_player_vout_Hold(i32*) #1

declare dso_local i32 @var_SetChecked(i32*, i8*, i32, i32) #1

declare dso_local i32 @vout_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
